# scoped

./: README.md
.dev/: docker-compose.yml
api/: .env.template  pyproject.toml
api/.dev/: docker-compose.yml
api/api/: models.py  urls.py
api/api/settings/: __init__.py
api/api/settings/components/: base.py  caches.py  database.py  scoped.py  spheres.py
api/api/settings/environments/: development.py  local.py  production.py
api/projects/: models.py  urls.py  views.py
api/projects/migrations/: 0001_initial.py
api/user/: __init__.py  authentication.py  models.py  permissions.py  spectacular_extensions.py
api/user/migrations/: 0001_initial.py
app/: biome.json  package-lock.json  package.json  vite.config.ts
app/.dev/: Dockerfile  start.sh
app/src/: App.tsx  routes.tsx
app/src/layouts/default/: index.tsx
app/src/pages/projects/: index.tsx
